@@ -1,6 +1,6 @@
-NAMESPACE <- environment()
+.NameSpace <- environment()
 .onLoad <- function(libname, pkgname) {
     ## load the module and store it in our namespace
     mod <- Module("RcppModels")
-    populate(mod, NAMESPACE)
+    populate(mod, .NameSpace)
 }
