@@ -12,12 +12,11 @@ namespace glm {
 		     double(*)(double,double,double)> drmap;
 
     class glmFamily {
-	std::string d_family, d_link; // as in the R glm family
+    protected:
 	Rcpp::List           lst; // original list from R
+	std::string d_family, d_link; // as in the R glm family
+	Rcpp::Function d_devRes, d_linkfun, d_linkinv, d_muEta, d_variance;
     public:
-
-//	glmFamily();
-
 	glmFamily(Rcpp::List) throw (std::runtime_error);
 
 	const std::string& fam() const {return d_family;}
